@@ -1,3 +1,9 @@
+2009-11-10  Andreas Kupries  <andreask@activestate.com>
+
+	* generic/tclObj.c: Plus memory leak in TclContinuationsEnter().
+	[Bug 2895323]. Forward port from Tcl 8.5 branch, change by Don
+	Porter.
+
 2009-11-09  Stuart Cassoff <stwo@users.sf.net>
 
 	* win/README: [bug 2459744]: Removed outdated Msys + Mingw info.
